# streaming-protocol-lt

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check_headers.yml  ci.yml
docs/: CMakeLists.txt  Makefile  README.md  client-requirements.md  openDAQ-signal-definition-examples.md  openDAQ-streaming-optional-features.md  openDAQ-streaming-transportlayer.bnf  openDAQ-streaming-workflow.md  openDAQ-streaming.md  openDAQ.template  post-xxx-sample.txt
include/streaming_protocol/: AsynchronousSignal.hpp  BaseConstantSignal.hpp  BaseDomainSignal.hpp  BaseSignal.hpp  BaseSynchronousSignal.hpp  BaseValueSignal.hpp  ConstantSignal.hpp  ControlServer.hpp  Defines.h  ExplicitTimeSignal.hpp  LinearTimeSignal.hpp  Logging.hpp  MetaInformation.hpp  ProducerSession.hpp  ProtocolHandler.hpp  Server.hpp  SignalContainer.hpp  StreamMeta.hpp  StreamWriter.h  SubscribedSignal.hpp  SynchronousSignal.hpp  Table.hpp  TimeResolution.hpp  Types.h  Unit.hpp  common.hpp  iWriter.hpp  jsonrpc_defines.hpp
lib/: BaseConstantSignal.cpp  BaseDomainSignal.cpp  BaseSignal.cpp  BaseSynchronousSignal.cpp  BaseValueSignal.cpp  CMakeLists.txt  CMakePresets.json  Config.cmake.in  ConstantSignal.cpp  ControlServer.cpp  Controller.cpp  Controller.hpp  ExplicitTimeSignal.cpp  HttpPost.cpp  HttpPost.hpp  LinearTimeSignal.cpp  Logging.cpp  MetaInformation.cpp  ProducerSession.cpp  ProtocolHandler.cpp  README.md  Server.cpp  SignalContainer.cpp  StreamMeta.cpp  StreamWriter.cpp  SubscribedSignal.cpp  TimeResolution.cpp  Types.cpp  Unit.cpp
lib/cmake/: StreamingUtils.cmake
lib/include/streaming_protocol/: AsynchronousSignal.hpp  BaseSynchronousSignal.hpp  Defines.h  Logging.hpp  MetaInformation.hpp  ProtocolHandler.hpp  SignalContainer.hpp  StreamWriter.h  SubscribedSignal.hpp  SynchronousSignal.hpp  TimeResolution.hpp  Unit.hpp
lib/src/: AsynchronousSignal.cpp  BaseSignal.cpp  BaseSynchronousSignal.cpp  CMakeLists.txt  Controller.hpp  HttpPost.hpp  Logging.cpp  ProducerSession.cpp  ProtocolHandler.cpp  Server.cpp  SignalContainer.cpp  StreamWriter.cpp  SubscribedSignal.cpp  SynchronousSignal.cpp  TimeResolution.cpp  Unit.cpp
lib/src/utils/: strings.hpp
lib/test/: CMakeLists.txt  ControlTest.cpp  ProducerSessionTest.cpp  ServerTest.cpp  SignalContainerTest.cpp  SignalTest.cpp  SubscribedSignalTest.cpp
test/: CMakeLists.txt  CompleteWebsocketSessionTest.cpp  ControlTest.cpp  ProducerSessionTest.cpp  ProtocolHandlerTest.cpp  ServerTest.cpp  SignalContainerTest.cpp  SignalTest.cpp  StreamMetaTest.cpp  StreamWriterTest.cpp  SubscribedSignalTest.cpp
tool/: CMakeLists.txt  calcfrequency.cpp  calctimefamily.cpp
tool/SignalGenerator/: CMakeLists.txt  README.md  changelog.md  config.json  defines.h  factorization.cpp  factorization.h  function.h  generatedasynchronoussignal.h  generatedsynchronoussignal.h  generatedtimesignal.h  igeneratedsignal.h  siggen2file.cpp  siggen2socket.cpp  siggen2websocket.cpp  signaldefinition.cpp  signaldefinition.h  signalgenerator.cpp  signalgenerator.h  socketwriter.cpp  socketwriter.h  transportheader.cpp  transportheader.h  worker.cpp  worker.h
tool/SignalGenerator/test/: CMakeLists.txt  addsignals_test.cpp  factorization_test.cpp  function_test.cpp  signalgenerator_test.cpp  timefamily_test.cpp
tool/StreamingClient/: CMakeLists.txt  StreamingClient.cpp
tool/license-header-checker/: do-license-header-check.sh
